syntax = "proto3";
package kratos.api;

option go_package = "analyse/internal/conf;conf";

import "google/protobuf/duration.proto";

message Bootstrap {
  Server server = 1;
  Data data = 2;
}

message Server {
  message HTTP {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration timeout = 3;
  }
  message GRPC {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration timeout = 3;
  }
  HTTP http = 1;
  GRPC grpc = 2;
}

message Data {
  message Database {
    string driver = 1;
    string source = 2;
  }
  message ClickHouse {
    string dsn = 1;
  }
  message Kafka {
    string group_id = 1;
    string addr = 2 ;
    string assignor = 3;
  }
  message Redis{
    string addr = 1;
    int64 db = 2;
    string password = 3;
  }
  Database database = 1;
  Redis redis = 2;
  ClickHouse click_house = 3;
  Kafka kafka = 4;
}
